tests/reference/asr-ichar_arg_len_compiletime-55503f1.stderr
semantic error: first argument to `ichar` must be of length one
 --> tests/errors/ichar_arg_len_compiletime.f90:2:19
  |
2 |    print *, ichar("Hello")
  |                   ^^^^^^^ 
